# data-mind

./: .env  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  compose.yml  local_start_up.sh
.github/workflows/: akshare-monitor.yml  coze-plugin.yml  docker-up.yml  web-server.yml
__common_error/: Cargo.toml
__common_error/src/: common_code.rs  ext.rs  lib.rs  mock.rs  status_code.rs
__common_macro/: Cargo.toml
__common_macro/src/: lib.rs
_akshare-monitor/: Cargo.toml
_akshare-monitor/ddl/: init_index.sql  init_other.sql  init_stock.sql
_akshare-monitor/src/: ch.rs  config.rs  init.rs  main.rs
_akshare-monitor/src/handler/: mod.rs  scheduler.rs  sql_gen.rs  web_hook.rs
_akshare-monitor/src/monitor_tasks/: a_stock.rs  clean_up.rs  mod.rs  utils.rs
_akshare-monitor/src/scheduler/: manager.rs  mod.rs
_akshare-monitor/src/tasks/: a_index.rs  a_stock.rs  clean_up.rs  mod.rs  s_impls.rs  utils.rs
_akshare-monitor/tests/: test_akshare_api.rs  test_ch_insert.rs
_common_error/src/: common_code.rs  lib.rs
_common_macro/: Cargo.toml
_coze-plugin/: Cargo.toml
_coze-plugin/src/: config.rs  handler.rs  init.rs  init_config.rs  main.rs
_coze-plugin/src/handler/: a_stock.rs  mod.rs  tech_indi.rs
_coze-plugin/tests/: test_akshare_api.rs
_web-server/: Cargo.toml
_web-server/ddl/: auth.sql
_web-server/src/: config.rs  init.rs  init_config.rs  main.rs
_web-server/src/background/: github_state.rs
_web-server/src/behind/: github_state.rs  mod.rs
_web-server/src/handler/: common.rs  coze.rs  manage.rs  mod.rs  user.rs
_web-server/src/handler/auth/: error.rs  github.rs  jwt_mw.rs  mod.rs  plain.rs
_web-server/src/repository/: auth_repo.rs  mod.rs  user_config_repo.rs
_web-server/src/schema/: auth_schema.rs  common.rs  mod.rs  user_config.rs  user_schema.rs
_web-server/tests/: test_auth_error.rs  test_error.rs
akshare-monitor/: Cargo.toml
akshare-monitor/src/: main.rs
akshare-monitor/src/handler/: mod.rs  scheduler.rs
akshare-monitor/src/scheduler/: manager.rs
conf/: akshare_monitor.toml  coze_plugin.toml  web_server.toml
docker/: config-logs.xml
scripts/: restart_akshare_monitor.sh  restart_coze_plugin.sh  restart_web_server.sh
src/: lib.rs  utils.rs
src/ding_robot/: error.rs  mod.rs  msg_client.rs  util.rs
src/handler/: a_index.rs  a_stock.rs  indicator.rs  mod.rs  news.rs  tech_indi.rs
src/models/: mod.rs
src/models/akshare/: a_stock.rs  mod.rs
src/models/ch_db/: a_stock.rs
src/repository/: a_index.rs  a_stock.rs  alarm_hist.rs  mod.rs
src/repository/akshare/: a_stock.rs  aindex_insert.rs  astock_insert.rs  mod.rs
src/repository/service/: a_stock.rs  aindex_fetch.rs  alarm.rs  astock_fetch.rs  mod.rs
src/schema/: a_index.rs  a_stock.rs  common.rs  coze.rs  dingding.rs  error.rs  mod.rs
src/schema/akshare/: a_index.rs  a_stock.rs  ak_astock.rs  mod.rs
src/schema/coze/: akshare.rs
src/schema/service/: a_index.rs  a_stock.rs  alarm.rs  mod.rs  news.rs  payload.rs  serv_aindex.rs  serv_astock.rs  webhook.rs
tmp/: expand_common_error.rs
web-server/: Cargo.toml
web-server/src/: config.rs  main.rs
