[package]
name = "data_mind"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "_akshare-monitor", "_coze-plugin", "_web-server"]

[workspace.dependencies]
tokio = { version = "1.43.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
clickhouse = { version = "0.13.2", features = [
    "native-tls",
    "inserter",
    "chrono",
] }
chrono = { version = "0.4.40", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v4"] }
poem = "3.1.7"
config = "0.15.8"
anyhow = "1.0.96"
snafu = "0.8.5"
ftlog = "0.2.14"
time = "0.3.37"
reqwest = { version = "0.12.14", features = ["json"] }
serde_json = "1.0.140"
actix-web = "4.10.2"
utoipa-actix-web = "0.1.2"
utoipa-scalar = { version = "0.3.0", features = ["actix-web"] }
utoipa = { version = "5.3.1", features = ["actix_extras"] }

[dependencies]
serde.workspace = true
chrono.workspace = true
clickhouse.workspace = true
