[package]
name = "akshare_monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
ftlog.workspace = true
clickhouse.workspace = true
anyhow.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
clap.workspace = true
config.workspace = true
poem.workspace = true
time.workspace = true
reqwest.workspace = true
strum.workspace = true
futures.workspace = true
backoff.workspace = true
rskafka.workspace = true
cron = "0.15.0"
data_mind = { path = ".." }
