[package]
name = "common_macro"
authors = ["DeFv destinyfunk@163.com"]
description = """
优化snafu错误处理的过程宏copy，详见https://greptime.com/blogs/2024-05-07-error-rust
"""
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = "2.0.100"
common_error = { path = "../_common_error" }
