[package]
name = "coze_plugin"
authors = ["DeFv destinyfunk@163.com"]
description = """
'Design and Implementation of the Intelligent Customer Service System for the Quantitative Data Monitoring Platform' \
(shot for data-mind) coze plugin backend
"""
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
ftlog.workspace = true
clickhouse.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
clap.workspace = true
config.workspace = true
time.workspace = true
reqwest.workspace = true
futures.workspace = true
actix-web.workspace = true
utoipa.workspace = true
utoipa-actix-web.workspace = true
utoipa-scalar.workspace = true
data_mind = { path = ".." }
