[package]
name = "web_server"
authors = ["DeFv destinyfunk@163.com"]
description = """
'Design and Implementation of the Intelligent Customer Service System for the Quantitative Data Monitoring Platform' \
(shot for data-mind) web service backend
"""
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
config.workspace = true
serde.workspace = true
clap.workspace = true
anyhow.workspace = true
snafu.workspace = true
ftlog.workspace = true
time.workspace = true
actix-web.workspace = true
utoipa.workspace = true
utoipa-actix-web.workspace = true
utoipa-scalar.workspace = true
sqlx.workspace = true
clickhouse.workspace = true
dashmap.workspace = true
rand.workspace = true
futures.workspace = true
data_mind = { path = ".." }
actix-files = "0.6.6"
jsonwebtoken = "9.3.1"
base64 = "0.22.1"
